# todo-list

./: .env.example  .gitignore  Dockerfile  README.MD  docker-compose.yml  entrypoint.sh  pyproject.toml
django_app/notes/: models.py  serializers.py  urls.py  views.py
django_app/notes/migrations/: 0001_initial.py
django_app/web_app/: asgi.py  settings.py  urls.py  wsgi.py
